--- a/app/views/service/_svcs_show.html.haml
+++ b/app/views/service/_svcs_show.html.haml
@@ -15,10 +15,16 @@
         - job = @record.try(:job)
         = miq_tab_header("tower_job") do
           = _("Job")
+      -if @record.type == "ServiceTerraformTemplate"
+        - Rails.logger.debug("test========terafform=====#{@record.inspect}")
+        - stack_job = @record.try(:job, "Stack")
+        = miq_tab_header("stack") do
+          = _("stack")
     .tab-content
       = miq_tab_content("details", 'default', :class => 'cm-tab') do
         = render :partial => "layouts/textual_groups_generic"
         - child_services = @record.direct_service_children.select(&:display)
+        - Rails.logger.debug("child_services====== #{child_services.inspect}")
         - unless child_services.blank?
           .row
             .col-md-12.col-lg-6
@@ -29,13 +35,23 @@
               = _('VMs')
             - if @view
               = render :partial => "layouts/gtl", :locals => {:view => @view, :no_flash_div => true}
+              - Rails.logger.debug("Current record:hdvhhvdhvhedvhvdhcvh====== #{@record.inspect}")
+      
+      - if @record.type == "ServiceTerraformTemplate"
+        - Rails.logger.debug("aaa======ServiceTerraformTemplate #{@record.inspect}")
+        = miq_tab_content("stack", 'default', :class => 'cm-tab') do
+          = render :partial => "layouts/textual_groups_tabs", :locals => {:textual_group_list => textual_stack_group_list, :tab_id => "stack"}
+          = react('ServiceDetailStdout', { :taskid => stack_job.raw_stdout_via_worker(User.current_user&.userid, 'html')});
+
       - if @record.type == "ServiceAnsibleTower" || @record.type == "ServiceAwx"
+        - Rails.logger.debug("aaa======tttt #{@record.inspect}")
         = miq_tab_content("tower_job", 'default', :class => 'cm-tab') do
           = render :partial => "layouts/textual_groups_tabs", :locals => {:textual_group_list => textual_tower_job_group_list, :tab_id => "tower_job"}
           - if job && job.respond_to?(:raw_stdout_via_worker)
             = react('ServiceDetailStdout', { :taskid => @record.job.raw_stdout_via_worker(User.current_user&.userid, 'html')})
 
       - if @record.type == "ServiceAnsiblePlaybook"
+        - Rails.logger.debug("bbb======tttt #{@record.inspect}")
         = miq_tab_content("provisioning", 'default', :class => 'cm-tab') do
           = render :partial => "layouts/textual_groups_tabs", :locals => {:textual_group_list => textual_provisioning_group_list, :tab_id => "provisioning"}
           - if provision_job
